--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Public/mystyles.css" />
     <title>All about WPI</title>
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="http://www.wpi.edu">WPI Home Page</a> </li>
+        <li><a href="http://canvas.wpi.edu/courses/41587">CS Advising Site</a> </li>
+    </ul>
+</nav>
+
+
 <h1>Worcester Info for WPI Students</h1>
 <p>Welcome to my page about <b>WPI</b></p>This is about stuff students do
 <div id="WPI">
@@ -22,13 +31,13 @@ Stops along the commuter rail to Boston:
 </ol>
 
 Best Restaurants near WPI
-<ol>
+<ul class="squarebullets">
     <li>Miss Worcester's Diner</li>
     <li>Boomer's</li>
     <li>Boynton</li>
     <li>The Fix Burger Bar</li>
     <li>Che Empanadas</li>
-</ol>
+</ul>
 <hr />
 <table>
     <caption>Dining at WPI</caption>
